--- a/styles_dark.css
+++ b/styles_dark.css
@@ -13,7 +13,7 @@
 a {
    
    text-decoration: none;
-   color:black;
+   color:white;
    
 }
 
@@ -24,7 +24,7 @@ a:hover{
 }
 
 
- nav > ul > li:hover:not(#nav-icon) {
+ /*nav > ul > li:hover:not(#nav-icon) {
    
    color:grey;
    border-width:thin;
@@ -36,50 +36,7 @@ a:hover{
 
 
  
-}
-
-.theme-switch-wrapper {  
-    display: flex;  
-    float: right;  
-    align-items: center;  
-    position: absolute;  
-    top: 0px;  right: 10px;  
-  }.theme-switch {  
-    display: inline-block;  
-    height: 34px;  
-    position: relative;  
-    width: 60px;
-  }
-   
-  .theme-switch input {  
-    display: none;
-  } .slider {  
-    background-color: #ccc;  
-    bottom: 0;  
-    cursor: pointer;  
-    left: 0;  
-    position: absolute;  
-    right: 0;  
-    top: 0;  
-    transition: .4s;
-  } .slider:before {  
-    background-color: #fff;  
-    bottom: 4px;  
-    content: "";  
-    height: 26px;  
-    left: 4px;  
-    position: absolute;  
-    transition: .4s;  
-    width: 26px;
-  } input:checked + .slider {  
-    background-color: #28acea;
-  } input: checked + .slider: before {  
-    transform: translateX(26px);
-  } .slider.round {  
-    border-radius: 34px;
-  } .slider.round:before {  
-    border-radius: 50%;
-  }
+} */
 
 section:not(.findMe-container){
     background-color:rgb(0,0,21);
@@ -100,7 +57,7 @@ nav {
   
   position:fixed;
   width:100%;
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+  box-shadow: 0 2px 4px 0 rgba(10, 198, 223, 0.2);
   font-size: 2em;
   padding: 0;
   margin-top:-11rem; /* Sans cela, ma nav-bar accompagne la section ! */
@@ -135,7 +92,7 @@ nav >ul {
 }
 
 #nav-icon > button {
-   box-shadow: 0 2px 2px 0 rgba(0,0,0,.2);
+   box-shadow: 0 2px 2px 0 rgba(0,0,0,.2); 
    border-radius: 25px;
   
 }
@@ -368,6 +325,7 @@ table {
    margin-right:0;
    width:100%;
   
+  
 
 }
 
@@ -378,15 +336,19 @@ tr {
    height:6rem;
    width:3rem;
    
+   
 }
 
 th, td {
    padding: 1rem;
-   background-color:rgba(238, 238, 238, 1);
+   background-color:rgb(0,0,21);
+
+  
    
 }
 td {
    width:35%;
+   border : 0.05rem solid cyan;
 }
 
 .pr-ol-content-container  {
@@ -433,17 +395,11 @@ td {
 #photoID{
    margin-top: 4rem;
    border-radius:50%;
-   box-shadow: 0 2px 4px 0 black;
+   box-shadow: 0 2px 4px 0 cyan;
 }
 
-.highlight-photoID
- {
-   box-shadow: 0 2px 4px 0 cyan;
- }
+
 .container-photo{
    margin-bottom:8rem;
 } 
 
-.highlight-section:not(#findMe-container) {
-   border-color: cyan;
-}
